--- a/apps/web/styles/globals.css
+++ b/apps/web/styles/globals.css
@@ -2,12 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-    --foreground-rgb: 255, 255, 255;
-    --background-rgb: 0, 18, 25;
-}
-
 body {
-    color: rgb(var(--foreground-rgb));
-    background: rgb(var(--background-rgb));
+    @apply bg-flint-bg text-flint-text-primary font-sans;
 }
